# RegimeSense

./: README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
logs/: hmm_model.pkl  live_log.csv
notebooks/: 01_data_exploration.ipynb  02_regime_analysis.ipynb  03_backtest_results.ipynb
regimesense/data/: fetcher.py
regimesense/features/: regime_features.py
regimesense/live/: paper_trader.py
regimesense/portfolio/: allocator.py
regimesense/regime/: hmm_classifier.py
regimesense/strategies/: base.py  defensive.py  mean_reversion.py  momentum.py  trend_following.py
